--- a/Proyecto/Proyecto/UI/DetailsView/DetailsViewController.xib
+++ b/Proyecto/Proyecto/UI/DetailsView/DetailsViewController.xib
@@ -10,6 +10,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailsViewController" customModule="Proyecto" customModuleProvider="target">
             <connections>
+                <outlet property="heroeDescLabel" destination="QGy-4i-Ql7" id="OcA-LD-YHG"/>
+                <outlet property="heroeImageView" destination="wA8-oM-pKe" id="ozX-d9-DvJ"/>
+                <outlet property="heroeNameLabel" destination="qDe-6E-Who" id="jAn-ig-ySM"/>
+                <outlet property="transformationsButton" destination="bWm-3E-aNc" id="qu1-f5-1Mf"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -17,14 +21,65 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <imageView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wA8-oM-pKe">
+                    <rect key="frame" x="0.0" y="74" width="393" height="200"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="200" id="a4V-R8-Ns0"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qDe-6E-Who">
+                    <rect key="frame" x="40" y="284" width="313" height="25"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="25" id="UCp-Bz-v7H"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QGy-4i-Ql7">
+                    <rect key="frame" x="8" y="319" width="377" height="220"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="220" id="RlN-W7-YX4"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bWm-3E-aNc">
+                    <rect key="frame" x="96.666666666666686" y="559" width="200" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="200" id="78v-5R-Hbb"/>
+                        <constraint firstAttribute="height" constant="50" id="9BE-nF-GFx"/>
+                    </constraints>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="filled" title="Transformaciones"/>
+                    <connections>
+                        <action selector="transformButtonTapped:" destination="-1" eventType="touchUpInside" id="7nE-RP-EVO"/>
+                    </connections>
+                </button>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemPinkColor"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="wA8-oM-pKe" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="15" id="0ZQ-2S-vvL"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="QGy-4i-Ql7" secondAttribute="trailing" constant="8" id="8Gj-ij-DGQ"/>
+                <constraint firstItem="qDe-6E-Who" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="40" id="LbM-ji-G3o"/>
+                <constraint firstItem="wA8-oM-pKe" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="ReE-JI-1jy"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="wA8-oM-pKe" secondAttribute="trailing" id="VQo-yC-6ul"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="qDe-6E-Who" secondAttribute="trailing" constant="40" id="aQN-PM-cPM"/>
+                <constraint firstItem="QGy-4i-Ql7" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="8" id="ac2-dV-khc"/>
+                <constraint firstItem="QGy-4i-Ql7" firstAttribute="top" secondItem="qDe-6E-Who" secondAttribute="bottom" constant="10" id="kNf-iy-cFx"/>
+                <constraint firstItem="bWm-3E-aNc" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="q4v-Ca-sw0"/>
+                <constraint firstItem="qDe-6E-Who" firstAttribute="top" secondItem="wA8-oM-pKe" secondAttribute="bottom" constant="10" id="tJV-dJ-Xf3"/>
+                <constraint firstItem="bWm-3E-aNc" firstAttribute="top" secondItem="QGy-4i-Ql7" secondAttribute="bottom" constant="20" id="ymT-VJ-yVw"/>
+            </constraints>
             <point key="canvasLocation" x="140" y="21"/>
         </view>
     </objects>
     <resources>
-        <systemColor name="systemPinkColor">
-            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
