--- a/Proyecto/Proyecto/UI/TableView/TableCell/TableCell.xib
+++ b/Proyecto/Proyecto/UI/TableView/TableCell/TableCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="318" height="72"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8gF-bo-b0u">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8gF-bo-b0u">
                         <rect key="frame" x="0.0" y="0.0" width="160" height="72"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="160" id="CJc-As-fCn"/>
